public/css/style.css
.graph[data-v-2d724db6] {
  width: 100%;
  max-width: 50rem;
  height: 30rem;
}
.header[data-v-2d724db6] {
  padding: 1rem;
}
.header .detail[data-v-2d724db6] {
    display: flex;
    align-items: center;
    margin: 0 0 1rem 0;
    color: var(--shadow);
    font-size: .9rem;
    font-weight: bold;
}
.header .icon[data-v-2d724db6] {
    fill: var(--shadow);
    margin: -.2rem 1rem 0 0;
}
.tiles[data-v-2d724db6] {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
  grid-gap: 1rem;
  padding: 1rem;
  margin: 0 0 1rem 0;
}
.tile[data-v-2d724db6] {
  background: var(--primary);
  display: inline-flex;
  flex-direction: column;
  padding: 0 0 .5rem 0;
  align-items: center;
  box-shadow: 0 0 3px var(--shadow-weak);
}
.tile-label[data-v-2d724db6] {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  padding: .75rem 1rem;
  margin: 0 0 .5rem 0;
  background: var(--shadow-hint);
  color: var(--highlight-extreme);
  font-size: 1rem;
  font-weight: bold;
}
.tile-label .icon[data-v-2d724db6] {
    width: 1rem;
    height: 1rem;
    fill: var(--highlight-extreme);
}
.tile-info[data-v-2d724db6] {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
  padding: .5rem 1rem;
}
.tile-info .section[data-v-2d724db6] {
    display: flex;
    align-items: flex-start;
}
.tile-info .value[data-v-2d724db6] {
    color: var(--text-light);
    font-size: 2rem;
}
.tile-info .unit[data-v-2d724db6] {
    width: 2.5rem;
    margin: .3rem 0 0 .5rem;
    color: var(--highlight);
    font-weight: bold;
    text-align: right;
}
.tile-info .icon[data-v-2d724db6] {
    width: 1.25rem;
    height: 1.25rem;
    margin: 0 1rem 0 0;
    fill: var(--highlight-strong);
}
.tile-info .icon.disabled[data-v-2d724db6] {
      fill: var(--highlight-weak);
}
.charts[data-v-2d724db6] {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(40rem, 1fr));
  grid-gap: 2rem 4rem;
  padding: 1rem;
}
.chart[data-v-2d724db6] {
  width: 100%;
  height: 25rem;
}

.icon {
  display: inline-block;
  flex-shrink: 0;
  width: 1rem;
  height: 1rem;
}
.icon svg {
    width: 100%;
    height: 100%;
}

:root {
  --primary: #8ab;
  --text: #222;
  --text-light: #fafafa;
  /* --background: #fafcff; */
  --background: #f0f1f2;
  --shadow: rgba(0, 0, 0, .5);
  --shadow-extreme: rgba(0, 0, 0, .9);
  --shadow-strong: rgba(0, 0, 0, .7);
  --shadow-weak: rgba(0, 0, 0, .2);
  --shadow-hint: rgba(0, 0, 0, .1);
  --highlight: rgba(255, 255, 255, .5);
  --highlight-extreme: rgba(255, 255, 255, .9);
  --highlight-strong: rgba(255, 255, 255, .7);
  --highlight-weak: rgba(255, 255, 255, .2);
  --highlight-hint: rgba(255, 255, 255, .075); }

html,
body {
  height: 100%; }

body {
  margin: 0;
  color: var(--text);
  background: var(--background);
  font-family: Verdana, sans-serif; }

